# Repollama

./: .gitignore  README.md
.github/workflows/: repollama_gate.yml
backend/: main.py  pyproject.toml  repollama.spec
backend/repollama/: __init__.py  cli.py  main.py
backend/repollama/agents/: __init__.py  base.py  coordinator.py  documentation.py  reviewer.py  specialists.py
backend/repollama/core/: __init__.py  config.py  enterprise.py
backend/repollama/database/: __init__.py  vector_store.py
backend/repollama/engines/: __init__.py  ast_parser.py  browser.py  cache_manager.py  ci_gatekeeper.py  debt_evaluator.py  diagram_generator.py  drift_engine.py  git_miner.py  graph_builder.py  macro_compiler.py  performance_auditor.py  sandbox.py  security_auditor.py  sequence_builder.py  watcher.py
backend/repollama/llm/: __init__.py  ollama.py
backend/tests/: test_agents.py  test_api_extensions.py  test_api_sandbox_video.py  test_api_stream.py  test_ast_parser.py  test_auditors.py  test_browser.py  test_cache.py  test_ci_gatekeeper.py  test_cli_audit.py  test_cli_docs.py  test_cli_record.py  test_debt_evaluator.py  test_diagrams.py  test_drift_engine.py  test_git_miner.py  test_governance_api.py  test_graph_builder.py  test_intelligence_api.py  test_macro_compiler.py  test_sandbox.py  test_sequence_builder.py  test_vector_store.py  test_watcher.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
(+25 files in other folders)
