[tool.poetry]
name = "repollama"
version = "0.1.0"
description = "Private, local-first repository intelligence platform"
authors = ["Repollama Team"]
packages = [{include = "repollama"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
typer = {extras = ["all"], version = "^0.12.3"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
httpx = "^0.27.0"
rich = "^13.7.0"
tree-sitter = ">=0.21.3,<0.24.0"
tree-sitter-python = ">=0.21.0,<0.24.0"
tree-sitter-javascript = ">=0.21.0,<0.24.0"
tree-sitter-typescript = ">=0.21.0,<0.24.0"
gitpython = "^3.1.43"
networkx = "^3.0"
chromadb = "^0.5.0"
sse-starlette = "^1.8.2"
docker = "^7.0.0"
playwright = "^1.42.0"
watchdog = "^4.0.0"








[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.9.0"

[tool.poetry.scripts]
repollama = "repollama.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
